@@ -56,6 +56,7 @@ $cfg = {
     , 'hcatlib'           => "$ENV{'HCAT_HOME'}/share/hcatalog/lib"
     , 'hcatconf'          => "$ENV{'HCAT_HOME'}/etc/hcatalog"
     , 'hcatbin'          => "$ENV{'HCAT_HOME'}/bin/hcat"
+    , 'hcatcoredevlib'    => "../../../../../core/build/lib/test"
 
     #PIG
     , 'pighome'          => $ENV{'PIG_HOME'}
